// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Customer: Stores customer information.
Employee: Stores employee data working at the store.
Inventory: Details about product inventory per supplier.
Product: Represents products available in the store.
Supplier: Stores supplier information for products.
Order: Represents customer orders.
OrderItem: Details each item within an order.
ProductPromotion: Connects promotions to products.
Promotion: Manages promotions available for products.
Rating: Records product ratings from customers.
Shipment: Tracks product shipments to stores.
Store: Contains store locations details.
'''
}

Table Customer {
    id INTEGER [primary key]
    name VARCHAR 
    email VARCHAR 
    address VARCHAR 
    }

Table Employee {
    id INTEGER [primary key]
    name VARCHAR 
    position VARCHAR 
    hire_date DATETIME 
    }

Table Inventory {
    id INTEGER [primary key]
    product_id INTEGER 
    supplier_id INTEGER 
    quantity_supplied INTEGER 
    supply_date DATETIME 
    }

Table Product {
    id INTEGER [primary key]
    name VARCHAR 
    category VARCHAR 
    price FLOAT 
    stock_quantity INTEGER 
    }

Table Supplier {
    id INTEGER [primary key]
    name VARCHAR 
    contact_info VARCHAR 
    }

Table Order {
    id INTEGER [primary key]
    customer_id INTEGER 
    order_date DATETIME 
    total_amount FLOAT 
    }

Table OrderItem {
    id INTEGER [primary key]
    order_id INTEGER 
    product_id INTEGER 
    quantity INTEGER 
    item_price FLOAT 
    amount FLOAT 
    }

Table ProductPromotion {
    id INTEGER [primary key]
    product_id INTEGER 
    promotion_id INTEGER 
    }

Table Promotion {
    id INTEGER [primary key]
    name VARCHAR 
    discount_percentage FLOAT 
    start_date DATETIME 
    end_date DATETIME 
    }

Table Rating {
    id INTEGER [primary key]
    product_id INTEGER 
    customer_id INTEGER 
    rating INTEGER 
    review VARCHAR 
    rating_date DATETIME 
    }

Table Shipment {
    id INTEGER [primary key]
    store_id INTEGER 
    product_id INTEGER 
    shipped_quantity INTEGER 
    shipment_date DATETIME 
    }

Table Store {
    id INTEGER [primary key]
    location VARCHAR 
    manager_id INTEGER 
    }



// Relationships
    Ref: Inventory.(product_id) < Product.(id)
    Ref: Inventory.(supplier_id) < Supplier.(id)
    Ref: Order.(customer_id) < Customer.(id)
    Ref: OrderItem.(order_id) < Order.(id)
    Ref: OrderItem.(product_id) < Product.(id)
    Ref: ProductPromotion.(product_id) < Product.(id)
    Ref: ProductPromotion.(promotion_id) < Promotion.(id)
    Ref: Rating.(customer_id) < Customer.(id)
    Ref: Rating.(product_id) < Product.(id)
    Ref: Shipment.(product_id) < Product.(id)
    Ref: Shipment.(store_id) < Store.(id)
    Ref: Store.(manager_id) < Employee.(id)
